# vulkan_first_try

./: .gitignore  CMakeLists.txt  README.md  shd_compile.bat
res/shader/first_triangle/: first_triangle.frag.spv
res/shd/first_triangle/: first_triangle.frag  first_triangle.vert
resource/shader/first_triangle/: first_triangle.vert  first_triangle.vert.spv
src/: main.cpp
src/app/: application.cpp  application.hpp
src/canvas/: canvas_def.hpp
src/canvas/window/: window.cpp  window.hpp
src/math/: math_def.hpp
src/render/pipline/: pipline.hpp
src/render/resource/: resourse_def.hpp
src/render/resource/shader/: shader.cpp  shader.hpp
